<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    tools:context=".SignIn">

    <!-- Dark Overlay -->
    <View
        android:id="@+id/darkOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:alpha="0.4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <!-- Title -->
    <TextView
        android:paddingLeft="20dp"
        android:paddingTop="40dp"
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="Let's Sign In"
        android:textColor="@color/white"
        android:textSize="38sp"
        android:fontFamily="@font/krona"
        tools:ignore="MissingConstraints"/>

    <!-- Form Container -->
    <LinearLayout
        android:id="@+id/formContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <!-- Username -->
        <TextView
            android:id="@+id/labelUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/krona"/>

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/enter_your_username"
            android:inputType="text"
            android:background="@drawable/input_gradient_bg"
            android:padding="12dp"
            android:textSize="14sp"
            android:textColor="#FFFFFF"
            android:textColorHint="#B7DDDDDD"
            android:fontFamily="@font/krona"/>


        <!-- Password -->
        <TextView
            android:id="@+id/labelPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/krona"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:background="@drawable/input_gradient_bg"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textSize="14sp"
            android:textColor="#FFFFFF"
            android:textColorHint="#B7DDDDDD"
            android:fontFamily="@font/krona"/>

        <!-- Sign In Button -->
        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:backgroundTint="@color/accent"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
